# nook.io

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AppShell.tsx  AvatarInteractionModal.tsx  BottomNav.tsx  CharacterBuilder.tsx  FocusTimer.tsx  NookIdBadge.tsx  NookLogo.tsx  PageHeader.tsx  PhaserRoom.tsx  ProfileAvatar.tsx  RoomChat.tsx  RoomStudyLeaderboard.tsx  StatusIndicator.tsx  Toggle.tsx  VinylAvatar.tsx
src/game/: LibraryScene.ts  displayDpi.ts  drawCozyRoom.ts  drawFrogAvatar.ts  pathfinding.ts  roomLayout.ts
src/lib/: achievements.ts  appInfo.ts  avatarCatalog.ts  avatarTypes.ts  backend.ts  mockBackend.ts  preferences.ts  remoteBackend.ts  sfx.ts  shareProfile.ts  useAuth.tsx
src/lib/supabase/: client.ts
src/pages/: AchievementsPage.tsx  AuthPage.tsx  CharacterBuilderPage.tsx  EditProfilePage.tsx  ForgotPasswordPage.tsx  FriendsPage.tsx  HomePage.tsx  JoinPage.tsx  LeaderboardPage.tsx  OnboardingAvatarPage.tsx  ProfilePage.tsx  ResetPasswordPage.tsx  SettingsPage.tsx  SplashPage.tsx  StudyRoomPage.tsx
supabase/: migration-profile-trigger.sql  schema.sql
